--- a/index.html
+++ b/index.html
@@ -6,52 +6,66 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,400&display=swap"
+          rel="stylesheet">
 </head>
 
 <body>
-    <header>
-        <img src="./img/logo.svg" alt="logo">
-        <img src="./img/loupe.svg" alt="loupe">
-        <button type="button">
-            <img src="./img/burger.svg" alt="burger">
-        </button>
-        <a href="#"><img src="./img/person.svg" alt="person"></a>
-        <a href="#"><img src="./img/cart.svg" alt="person"></a>
-        <nav>
-            <h2>menu</h2>
-            <ul>
-                <li>
-                    <h3>man</h3>
-                    <ul>
-                        <li><a href="#">Accessories</a></li>
-                        <li><a href="#">Bags</a></li>
-                        <li><a href="#">Denim</a></li>
-                        <li><a href="#">T-Shirts</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <h3>woman</h3>
-                    <ul>
-                        <li><a href="#">Accessories</a></li>
-                        <li><a href="#">Jackets & Coats</a></li>
-                        <li><a href="#">Polos</a></li>
-                        <li><a href="#">T-Shirts</a></li>
-                        <li><a href="#">Shirts</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <h3>kids</h3>
-                    <ul>
-                        <li><a href="#">Accessories</a></li>
-                        <li><a href="#">Jackets & Coats</a></li>
-                        <li><a href="#">Polos</a></li>
-                        <li><a href="#">T-Shirts</a></li>
-                        <li><a href="#">Shirts</a></li>
-                        <li><a href="#">Bags</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>
+    <header class="header">
+        <div class="container">
+            <div class="header__wrp">
+                <div>
+                    <img class="header__logo" src="./img/logo.svg" alt="logo">
+                    <img class="header__search" src="./img/loupe.svg" alt="loupe">
+                </div>
+                <div class="header__nav-group">
+                    <button class="header__button" type="button">
+                        <img src="./img/burger.svg" alt="burger">
+                    </button>
+                    <a class="header__link" href="#"><img src="./img/person.svg" alt="person"></a>
+                    <a class="header__link" href="#"><img src="./img/cart.svg" alt="person"></a>
+                </div>
+            </div>
+            <nav class="header__menu">
+                <h2 class="header__menu-title">menu</h2>
+                <ul class="header__menu-list">
+                    <li class="header__menu-item menu-sub-item">
+                        <h3 class="menu-sub-item__title">man</h3>
+                        <ul  class="menu-sub-item__list">
+                            <li class="menu-sub-item__item-link"><a href="#">Accessories</a></li>
+                            <li class="menu-sub-item__item-link"><a href="#">Bags</a></li>
+                            <li class="menu-sub-item__item-link"><a href="#">Denim</a></li>
+                            <li  class="menu-sub-item__item-link"><a href="#">T-Shirts</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h3 class="menu-sub-item__title">woman</h3>
+                        <ul class="menu-sub-item__list">
+                            <li class="menu-sub-item__item-link"><a href="#">Accessories</a></li>
+                            <li class="menu-sub-item__item-link"><a href="#">Jackets & Coats</a></li>
+                            <li class="menu-sub-item__item-link"><a href="#">Polos</a></li>
+                            <li class="menu-sub-item__item-link"><a href="#">T-Shirts</a></li>
+                            <li class="menu-sub-item__item-link"><a href="#">Shirts</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h3 class="menu-sub-item__title">kids</h3>
+                        <ul class="menu-sub-item__list">
+                            <li class="menu-sub-item__item-link"><a href="#">Accessories</a></li>
+                            <li class="menu-sub-item__item-link"><a href="#">Jackets & Coats</a></li>
+                            <li class="menu-sub-item__item-link"><a href="#">Polos</a></li>
+                            <li class="menu-sub-item__item-link"><a href="#">T-Shirts</a></li>
+                            <li class="menu-sub-item__item-link"><a href="#">Shirts</a></li>
+                            <li class="menu-sub-item__item-link"><a href="#">Bags</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
         <section>
