--- a/index.html
+++ b/index.html
@@ -151,22 +151,22 @@
             <button class="products__button">Browse All Product</button>
         </section>
     </main>
-    <section>
-        <ul>
-            <li>
-                <img src="/img/Free_Delivery.svg" alt="Free_Delivery">
-                <h3>Free Delivery</h3>
-                <p>Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
+    <section class="benefits">
+        <ul class="benefits__list container">
+            <li class="benefits__item">
+                <img class="benefits__item-img" src="/img/Free_Delivery.svg" alt="Free_Delivery">
+                <h3 class="benefits__item-title">Free Delivery</h3>
+                <p class="benefits__item-desc">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
             </li>
-            <li>
-                <img src="/img/sales.svg" alt="sales">
-                <h3>Sales & discounts</h3>
-                <p>Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
+            <li class="benefits__item">
+                <img class="benefits__item-img" src="/img/sales.svg" alt="sales">
+                <h3 class="benefits__item-title">Sales & discounts</h3>
+                <p class="benefits__item-desc">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
             </li>
-            <li>
-                <img src="/img/Quality_assurance.svg" alt="Quality_assurance">
-                <h3>Quality assurance</h3>
-                <p>Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
+            <li class="benefits__item">
+                <img class="benefits__item-img" src="/img/Quality_assurance.svg" alt="Quality_assurance">
+                <h3 class="benefits__item-title">Quality assurance</h3>
+                <p class="benefits__item-desc">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
             </li>
         </ul>
     </section>
