--- a/index.html
+++ b/index.html
@@ -170,43 +170,49 @@
             </li>
         </ul>
     </section>
-    <footer>
-        <div>
-            <img src="img/footer_face.jpg" alt="footer_face">
-            <p>“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum“</p>
-        </div>
-        <div>
-            <h2>subscribe</h2>
-            <h3>for our newletter and promotion</h3>
-            <form action="">
-                <input type="email" placeholder="Enter Your Email">
-                <button>Subscribe</button>
-            </form>
-        </div>
-        <div class="">
-            <p>© 2021  Brand  All Rights Reserved.</p>
-            <ul>
-                <li>
-                    <a href="#">
-                        <img src="img/fb_logo.svg" alt="fb_logo">
-                    </a>
+    <footer class="footer">
+        <div class="footer_wrp">
+                <ul class="footer__info container">
+                <li class="footer__info-item">
+                    <img class="footer__info-img" src="img/footer_face.png" alt="footer_face">
+                    <p class="footer__info-text">“Vestibulum quis porttitor dui! Quisque viverra nunc mi,<span class="footer__info-text_italic"> a pulvinar purus condimentum“</span> </p>
                 </li>
-                <li>
-                    <a href="#">
-                        <img src="img/insta_logo.svg" alt="insta_logo">
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="img/p_logo.svg" alt="p_logo">
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="img/twitter_logo.svg" alt="twitter_logo">
-                    </a>
+                <li class="footer__info-item">
+                    <h2 class="footer__info-subscribetitle">subscribe</h2>
+                    <h3 class="footer__info-subscribetext">for our newletter and promotion</h3>
+                    <form class="footer__info-form" action="">
+                        <input class="footer__info-input" type="email" placeholder="Enter Your Email">
+                        <button class="footer__info-button">Subscribe</button>
+                    </form>
                 </li>
             </ul>
+            </div>
+        <div class="footer_copyright">
+            <div class=" footer_copyright_wrp container">
+                <p class="footer_copyright-text">© 2021  Brand  All Rights Reserved.</p>
+                <ul class="footer_copyright-list">
+                    <li class="footer_copyright-item">
+                        <a href="#">
+                            <img src="img/fb_logo.svg" alt="fb_logo">
+                        </a>
+                    </li>
+                    <li class="footer_copyright-item">
+                        <a href="#">
+                            <img src="img/insta_logo.svg" alt="insta_logo">
+                        </a>
+                    </li>
+                    <li class="footer_copyright-item">
+                        <a href="#">
+                            <img src="img/p_logo.svg" alt="p_logo">
+                        </a>
+                    </li>
+                    <li class="footer_copyright-item">
+                        <a href="#">
+                            <img src="img/twitter_logo.svg" alt="twitter_logo">
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
