edit type to class

--- a/registration.html
+++ b/registration.html
@@ -24,7 +24,7 @@
                     <img class="header__search-img" src="./img/loupe.svg" alt="loupe">
                     <form class="header__search-form" action="">
                         <label class="header__search-label visually-hidden" for="search">поиск</label>
-                        <input type="header__search-input" placeholder="Поиск" id="search">
+                        <input class="header__search-input" placeholder="Поиск" id="search">
                     </form>
                 </div>
             </div>
