--- a/cart.html
+++ b/cart.html
@@ -92,7 +92,7 @@
                     <img src="./img/cart_prod1.jpg" alt="Cart product img" class="cart__products_item_img">
                     <div class="cart__products_item_info">
                         <h2 class="cart__products_item_info_title">mango  people  t-shirt</h2>
-                        <p class="cart__products_item_info_price">Price: $300</p>
+                        <p class="cart__products_item_info_price">Price: <span class="cart__products_item_info_price-rate">$300</span></p>
                         <p class="cart__products_item_info_color">Color: Red</p>
                         <p class="cart__products_item_info_size">Size: Xl</p>
                         <p class="cart__products_item_info_quantity">Quantity:	2</p>
@@ -102,15 +102,15 @@
                     <img src="./img/cart_prod2.jpg" alt="Cart product img" class="cart__products_item_img">
                     <div class="cart__products_item_info">
                         <h2 class="cart__products_item_info_title">mango  people  t-shirt</h2>
-                        <p class="cart__products_item_info_price">Price: $300</p>
+                        <p class="cart__products_item_info_price">Price: <span class="cart__products_item_info_price-rate">$300</span></p>
                         <p class="cart__products_item_info_color">Color: Red</p>
                         <p class="cart__products_item_info_size">Size: Xl</p>
                         <p class="cart__products_item_info_quantity">Quantity:	2</p>
                     </div>
                 </div>
                 <div class="cart__products_buttons">
-                    <button class="cart__products_buttons_clear">clear shopping cart</button>
-                    <button class="cart__products_buttons_continue">continue shopping</button>
+                    <button class="cart__products_button">clear shopping cart</button>
+                    <button class="cart__products_button">continue shopping</button>
                 </div>
             </div>
             <div class="cart__adress">
