cart without adaptive

--- a/cart.html
+++ b/cart.html
@@ -118,16 +118,17 @@
                     <fieldset class="cart__form-fieldset">
                         <legend class="cart__form-legend">shipping adress</legend>
                         <label class="visually-hidden" for="Country">Country</label>
-                        <input class="cart_input" type="text" id="Country" placeholder="Country" required>
+                        <input class="cart__input" type="text" id="Country" placeholder="Country" required>
                         <label class="visually-hidden" for="State">State</label>
                         <input class="cart__input" type="text" id="State" placeholder="State">
                         <label class="visually-hidden" for="Postcode">Postcode</label>
                         <input class="cart__input" type="text" id="Postcode" placeholder="Postcode / Zip">
                     </fieldset>
+                    <button class="cart__adress_button">get a quote</button>
                 </form>
                 <div class="cart__adress_total">
-                    <p class="cart__adress_total_subtotal">SUB TOTAL         $900</p>
-                    <p class="cart__adress_total_grandtotal">GRAND TOTAL      $900</p>
+                    <p class="cart__adress_total_subtotal">SUB TOTAL $900</p>
+                    <p class="cart__adress_total_grandtotal">GRAND TOTAL <span class="cart__adress_total_grandtotal-rate">$900</span></p>
                     <button class="cart__adress_total-button">proceed to checkout</button>
                 </div>
             </div>
