--- a/product.html
+++ b/product.html
@@ -83,25 +83,37 @@
     </div>
 </header>
 <main>
-    <section class="product__carousel container">
+    <div class="product__title-wrap">
+        <div class="product__title container">
+            <h2 class="product__title-pink">new arrivals</h2>
+            <h2 class="product__title_right">home / men /
+                <span class="product__title_right-pink">new arrivals</span>
+            </h2>
+        </div>
+    </div>
+    <section class="product__carousel">
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./img/carousel_img.png" class="d-block w-100" alt="...">
+                    <div class="product__carousel-banner_block">
+                        <img class="product__carousel-banner_img" src="./img/carousel_img.png" class="d-block w-100" alt="...">
+                    </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./img/carousel_img.png" class="d-block w-100" alt="...">
-                </div>
+                    <div class="product__carousel-banner_block">
+                        <img class="product__carousel-banner_img" src="./img/carousel_img.png" class="d-block w-100" alt="...">
+                    </div>                </div>
                 <div class="carousel-item">
-                    <img src="./img/carousel_img.png" class="d-block w-100" alt="...">
-                </div>
+                    <div class="product__carousel-banner_block">
+                        <img class="product__carousel-banner_img" src="./img/carousel_img.png" class="d-block w-100" alt="...">
+                    </div>                </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <button class="carousel-control-prev product__carousel-control" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon product__carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <button class="carousel-control-next product__carousel-control" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                <span class="carousel-control-next-icon product__carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
